--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -47,6 +47,13 @@ body {
   height: 35px;
 }
 
+.logo-box:hover {
+  animation: flipMe;
+  animation-duration: 1s;
+  backface-visibility: hidden;
+
+}
+
 .text-box {
   position: absolute;
   top: 40%;
@@ -57,6 +64,7 @@ body {
 .heading-primary {
   text-transform: uppercase;
   color: #fff;
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -64,6 +72,10 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+  animation-name: moveInLeft;
+  animation-duration: 1.5s;
+  /*animation-iteration-count: infinite;*/
+  /*animation-timing-function: ease-out;*/
 }
 
 .heading-primary-sub {
@@ -71,4 +83,56 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+  animation: moveInRight 1.5s ease-out;
+}
+
+@keyframes moveInLeft {
+  /*start*/
+  0% {
+    transform: rotateY(-360deg);
+    /*opacity: 0;*/
+    /*transform: translateX(-100px);*/
+  }
+  50% {
+    /*transform: rotateY(180deg);*/
+  }
+  70% {
+    /*transform: translateX(10px);*/
+    transform: rotateY(220deg);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    transform: rotateY(360deg);
+  }
+  /*finish*/
+}
+
+@keyframes moveInRight {
+  /*start*/
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  70% {
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  /*finish*/
+}
+
+@keyframes flipMe {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+
 }
