finish first section

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -126,6 +126,22 @@ body {
   /*finish*/
 }
 
+@keyframes moveInBottom {
+  /*start*/
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  70% {
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  /*finish*/
+}
+
 @keyframes flipMe {
   0% {
     transform: rotateY(0deg);
@@ -148,6 +164,7 @@ body {
   display: inline-block;
   border-radius: 50px;
   transition: all .2s;
+  position: relative;
 }
 
 .btn:hover {
@@ -160,8 +177,34 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, .6);
 }
 
-
 .btn-white {
   background-color:white;
   color:#777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after {
+  background-color: white;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  /*opacity: 0;*/
+
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out; 
 }
